toolchain/internal/core/analysis/testdata/errors/enums/spread_cycle.vdl
// @expect: E204

enum A {
  ...B
  A1
}

enum B {
  ...A
  B1
}
